Feat: Update project functionality
